--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
             crossorigin="anonymous">
 
+    <style>
+        #header {
+          background: url("imgs/header.jpeg");
+            }
+        /*background: url("imgs/header.jpeg") center center / cover no-repeat;*/
 
+    </style>
 
     <title>Pattern</title>
 </head>
@@ -20,15 +26,57 @@
 <body>
 
     <nav class="navbar bg-dark navbar-dark">
-      <div class="container">
-        <a href="" class="navbar-brand"><i class="fas fa-binoculars mr-2"></i>Pattern</a>
-      </div>
+        <div class="container">
+            <a href="" class="navbar-brand"><i class="fas fa-binoculars mr-2"></i>Pattern</a>
+        </div>
     </nav>
 
+    <section id="header" class="jumbotron text-center">
+        <h1 class="display-3">Pattern</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <a href="" class="btn btn-primary">Do Something</a>
+        <a href="" class="btn btn-success">Another Thing</a>
+    </section>
 
-<section id="header" class="jumbotron text-center">
-      <h1 class="display-3">Pattern</h1>
-</section>
+    <section id="gallery">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern1.jpeg" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">First thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <a href="" class="btn btn-outline-success btn-sm ">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm "><i class="far fa-heart"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern2.jpeg" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Second thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <a href="" class="btn btn-outline-success btn-sm ">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm "><i class="far fa-heart"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern3.jpeg" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Third thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <a href="" class="btn btn-outline-success btn-sm ">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm "><i class="far fa-heart"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
